# git-mermaid

./: README.md  pyproject.toml
git_mermaid/: __init__.py  git.py  mermaid.py
tests/: fixtures.py  test_fixtures.py
