[tool.poetry]
name = "git-mermaid"
version = "0.1.0"
description = "Generate Mermaid.js GitGraphs from a git repo"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/sneakers-the-rat/git-mermaid"
packages = [
    { include = "git_mermaid" }
]

[tool.poetry.dependencies]
python = "^3.8"
gitpython = "^3.1.37"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = {version = "^7.4.2", optional = true}

[tool.poetry.extras]
tests = ['pytest']


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
